Bug 213868 - okteta does not set document as modified when it is changed
Summary: okteta does not set document as modified when it is changed
Status: RESOLVED FIXED
Alias: None
Product: okteta
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Friedrich W. H. Kossebau
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-11-09 18:07 UTC by esigra
Modified: 2009-11-10 00:38 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description esigra 2009-11-09 18:07:56 UTC
Version:           0.3.1 (using KDE 4.3.1)
OS:                Linux
Installed from:    Gentoo Packages

1. Execute "okteta ~/.kde4/share/config/oktetarc".
2. Move the cursor to the first byte in the left view (where the value is probably 5B).
3. Type 20.

Now the application behaves totally strange. Undo is enabled, but not Save! So the document can not be saved as usual.

Now press Ctrl+W. Then it somehow notices that the document has been modified and asks if the changes should be saved or discarded. Saving seems to save, but the document remains open! Closing it a second time with Ctrl+W actually closes it.
Comment 1 Friedrich W. H. Kossebau 2009-11-09 18:50:15 UTC
Indeed, thanks for your report. This happens even in the current development version. Will investigate.
Comment 2 Friedrich W. H. Kossebau 2009-11-10 00:14:42 UTC
SVN commit 1046919 by kossebau:

backport of 1046918: fixed: doing some grouped change (e.g. editing values, which is one behind the scenes) if unmodified does not emit the modifiedChanged signal

CCBUG: 213868


 M  +2 -0      piecetablebytearraymodel_p.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1046919
Comment 3 Friedrich W. H. Kossebau 2009-11-10 00:33:32 UTC
SVN commit 1046929 by kossebau:

backport of 1046927: fixed: logic was inverted, canClose should be true if a modified document was successfully synced

BUG: 213868


 M  +2 -2      kdocumentsyncmanager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1046929
Comment 4 Friedrich W. H. Kossebau 2009-11-10 00:38:27 UTC
Hm, were two bugs residing there since the early days of Okteta, the later even loosing data if the save failed as the inverted logic resulted in closing the document, ouch.
Thanks a lot for being the one finally reporting them :)
Fixes should be coming with KDE 4.3.4 and 4.4.0