backport of 1046927: fixed: logic was inverted, canClose should be true if a modified document was successfully synced

BUG: 213868

svn path=/branches/KDE/4.3/kdeutils/okteta/; revision=1046929